[tool.poetry]
name = "pythonstartup"
version = "0.1.0"
description = ""
authors = ["Piotr Kilczuk <piotr@kilczuk.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
ipython = "^7.24.1"
colorama = "^0.4.4"
SQLAlchemy = "^1.4.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
